--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,9 @@
     "Polymer": true,
     "app": true
   },
+  "plugins": [
+    "html"
+  ],
   "rules": {
     "no-bitwise": 2,
     "camelcase": 1,
