--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,6 @@
-# EditorConfig helps developers define and maintain consistent
-# coding styles between different editors and IDEs
-# editorconfig.org
+# EditorConfig is awesome: http://EditorConfig.org
 
 root = true
-
 
 [*]
 
@@ -19,7 +16,3 @@ insert_final_newline = true
 
 [*.md]
 trim_trailing_whitespace = false
-
-[{testfile1,testfile2}.js]
-indent_style = space
-indent_size = 4
