--- a/.eslintrc
+++ b/.eslintrc
@@ -1,48 +1,15 @@
 {
+  "extends": "airbnb/base",
   "env": {
     "browser": true,
-    "node": true,
     "es6": true
   },
-  "globals": {
-    "$": true,
-    "jQuery": true,
-    "Polymer": true,
-    "app": true
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module"
   },
   "plugins": [
-    "html"
-  ],
-  "rules": {
-    "no-bitwise": 2,
-    "camelcase": 1,
-    "curly": 2,
-    "eqeqeq": 2,
-    "block-scoped-var": 1,
-    "wrap-iife": [
-      2,
-      "any"
-    ],
-    "indent": [
-      2,
-      2, {
-        "SwitchCase": 1
-      }
-    ],
-    "no-use-before-define": 2,
-    "no-caller": 2,
-    "quotes": [
-      2,
-      "single"
-    ],
-    "no-undef": 2,
-    "no-unused-vars": 1,
-    "new-cap": 0,
-    "max-len": [
-      2,
-      220
-    ],
-    "arrow-parens": 2,
-    "trailing-spaces": 0
-  }
+    "html",
+    "import"
+  ]
 }
