--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,6 @@
   "theme_color": "#8170a7",
   "start_url": "/index.html",
   "display": "standalone",
-  "orientation": "landscape",
   "icons": [
     {
       "src": "/android-chrome-36x36.png",
@@ -43,6 +42,11 @@
       "sizes": "192x192",
       "type": "image/png",
       "density": 4
+    },
+    {
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
     }
   ]
 }
