--- a/manifest.json
+++ b/manifest.json
@@ -46,7 +46,7 @@
     {
       "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/png"
     }
   ]
 }
