--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "gulp": "./node_modules/.bin/gulp",
     "build": "set NODE_ENV=production&&gulp",
-    "dev": "set NODE_ENV=development&&gulp serve",
+    "start": "set NODE_ENV=development&&gulp serve",
     "prod": "set NODE_ENV=production&&gulp serve",
     "styles": "gulp styles",
     "scripts": "gulp scripts",
@@ -36,40 +36,40 @@
     ]
   },
   "dependencies": {
-    "browser-sync": "^2.14.2",
-    "cssnano": "^3.7.4",
+    "browser-sync": "^2.17.3",
+    "cssnano": "^3.7.7",
     "del": "^2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-load-plugins": "^1.2.4",
-    "gulp-stylelint": "^3.2.0",
+    "gulp-load-plugins": "^1.3.0",
+    "gulp-stylelint": "^3.4.0",
     "postcss-browser-reporter": "^0.5.0",
-    "postcss-cssnext": "^2.7.0",
+    "postcss-cssnext": "^2.8.0",
     "postcss-import": "^8.1.2",
     "postcss-reporter": "^1.4.1",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
-    "babel-core": "^6.14.0",
+    "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "eslint": "^3.4.0",
-    "eslint-config-airbnb": "^10.0.1",
-    "eslint-plugin-html": "^1.5.2",
-    "eslint-plugin-import": "^1.14.0",
+    "babel-preset-es2015": "^6.16.0",
+    "eslint": "^3.8.0",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-html": "^1.5.3",
+    "eslint-plugin-import": "^2.0.1",
     "gulp-eslint": "^3.0.1",
-    "gulp-htmlmin": "^2.0.0",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.3",
     "gulp-minify-inline": "^0.2.1",
-    "gulp-newer": "^1.2.0",
+    "gulp-newer": "^1.3.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.1.1",
+    "gulp-postcss": "^6.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^2.0.0-alpha",
+    "gulp-sourcemaps": "^2.1.1",
     "gulp-util": "^3.0.7",
     "postcss-url": "^5.1.2",
-    "stylelint-config-standard": "^13.0.0",
+    "stylelint-config-standard": "^13.0.2",
     "uglify-loader": "^1.3.0"
   }
 }
