--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "description": "personal website",
   "version": "1.0.0",
   "author": "Artur Parkhisenko <ikeagold@gmail.com> (https://arturparkhisenko.github.io/)",
-  "main": "gulpfile.babel.js",
-  "jsnext:main": "gulpfile.babel.js",
+  "main": "gulpfile.js",
+  "jsnext:main": "gulpfile.js",
   "scripts": {
     "gulp": "./node_modules/.bin/gulp",
     "build": "set NODE_ENV=production&&gulp",
@@ -12,16 +12,8 @@
     "prod": "set NODE_ENV=production&&gulp serve",
     "styles": "gulp styles",
     "scripts": "gulp scripts",
-    "lint:styles": "gulp lint:styles",
-    "lint:scripts": "gulp lint:scripts"
-  },
-  "stylelint": {
-    "rules": {
-      "at-rule-empty-line-before": "never",
-      "comment-empty-line-before": "never",
-      "comment-whitespace-inside": "never",
-      "indentation": 2
-    }
+    "lintStyles": "gulp lintStyles",
+    "lintScripts": "gulp lintScripts"
   },
   "keywords": [],
   "homepage": "https://arturparkhisenko.github.io/",
@@ -32,44 +24,51 @@
   "license": "MIT",
   "babel": {
     "presets": [
-      "es2015"
+      [
+        "env",
+        {
+          "targets": {
+            "browsers": [
+              "last 2 versions",
+              "safari >= 7"
+            ]
+          }
+        }
+      ]
     ]
   },
   "dependencies": {
-    "browser-sync": "^2.17.3",
-    "cssnano": "^3.7.7",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.4.0",
+    "browser-sync": "^2.18.11",
+    "cssnano": "^3.10.0",
     "del": "^2.2.2",
+    "eslint": "^3.19.0",
+    "eslint-config-google": "^0.7.1",
+    "eslint-plugin-html": "^2.0.3",
+    "eslint-plugin-import": "^2.2.0",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-load-plugins": "^1.3.0",
-    "gulp-stylelint": "^3.4.0",
-    "postcss-browser-reporter": "^0.5.0",
-    "postcss-cssnext": "^2.8.0",
-    "postcss-import": "^8.1.2",
-    "postcss-reporter": "^1.4.1",
-    "webpack": "^1.13.2"
-  },
-  "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
-    "eslint": "^3.8.0",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-html": "^1.5.3",
-    "eslint-plugin-import": "^2.0.1",
     "gulp-eslint": "^3.0.1",
     "gulp-htmlmin": "^3.0.0",
-    "gulp-if": "^2.0.1",
-    "gulp-imagemin": "^3.0.3",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.2.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-minify-inline": "^0.2.1",
     "gulp-newer": "^1.3.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.2.0",
+    "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^2.1.1",
-    "gulp-util": "^3.0.7",
-    "postcss-url": "^5.1.2",
-    "stylelint-config-standard": "^13.0.2",
-    "uglify-loader": "^1.3.0"
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-stylelint": "^3.9.0",
+    "gulp-util": "^3.0.8",
+    "postcss-cssnext": "^2.11.0",
+    "postcss-import": "^10.0.0",
+    "postcss-reporter": "^3.0.0",
+    "postcss-url": "^6.1.0",
+    "stylelint-config-standard": "^16.0.0",
+    "uglify-loader": "^2.0.0",
+    "webpack": "^2.5.1"
   }
 }
