--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
         {
           "targets": {
             "browsers": [
+              "> 1%",
               "last 2 versions",
-              "safari >= 7"
+              "safari >= 7",
+              "Firefox ESR"
             ]
           }
         }
@@ -38,21 +40,21 @@
     ]
   },
   "dependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.4.0",
-    "browser-sync": "^2.18.11",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
+    "babel-preset-env": "^1.5.2",
+    "browser-sync": "^2.18.12",
     "cssnano": "^3.10.0",
-    "del": "^2.2.2",
-    "eslint": "^3.19.0",
-    "eslint-config-google": "^0.7.1",
-    "eslint-plugin-html": "^2.0.3",
-    "eslint-plugin-import": "^2.2.0",
+    "del": "^3.0.0",
+    "eslint": "^4.0.0",
+    "eslint-config-google": "^0.8.0",
+    "eslint-plugin-html": "^3.0.0",
+    "eslint-plugin-import": "^2.6.0",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-eslint": "^3.0.1",
+    "gulp-eslint": "^4.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.2.0",
+    "gulp-imagemin": "^3.3.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-minify-inline": "^0.2.1",
     "gulp-newer": "^1.3.0",
@@ -65,10 +67,10 @@
     "gulp-util": "^3.0.8",
     "postcss-cssnext": "^2.11.0",
     "postcss-import": "^10.0.0",
-    "postcss-reporter": "^3.0.0",
-    "postcss-url": "^6.1.0",
+    "postcss-reporter": "^4.0.0",
+    "postcss-url": "^7.0.0",
     "stylelint-config-standard": "^16.0.0",
     "uglify-loader": "^2.0.0",
-    "webpack": "^2.5.1"
+    "webpack": "^3.0.0"
   }
 }
