--- a/package.json
+++ b/package.json
@@ -39,38 +39,35 @@
       ]
     ]
   },
-  "dependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-env": "^1.6.0",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.18.13",
     "cssnano": "^3.10.0",
     "del": "^3.0.0",
-    "eslint": "^4.3.0",
+    "eslint": "^4.11.0",
     "eslint-config-google": "^0.9.1",
-    "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-html": "^4.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-eslint": "^4.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.3.0",
+    "gulp-imagemin": "^4.0.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-minify-inline": "^1.0.0",
-    "gulp-newer": "^1.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-stylelint": "^4.0.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-stylelint": "^5.0.0",
     "gulp-util": "^3.0.8",
     "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^10.0.0",
     "postcss-reporter": "^5.0.0",
-    "postcss-url": "^7.1.1",
     "stylelint-config-standard": "^17.0.0",
+    "stylelint-processor-html": "^1.0.0",
     "uglify-loader": "^2.0.0",
-    "webpack": "^3.4.1"
+    "webpack": "^3.8.1"
   }
 }
