--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,19 @@
 {
   "extends": ["eslint:recommended", "google"],
+  "parser": "babel-eslint",
   "env": {
     "browser": true,
     "es6": true,
     "node": true
   },
   "parserOptions": {
-    "ecmaVersion": 8,
+    "ecmaVersion": 2018,
     "sourceType": "module",
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true
     }
   },
-  "plugins": [
-    "html"
-  ],
+  "plugins": ["html"],
   "rules": {
     "no-console": 0,
     "no-param-reassign": 0,
