--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "jsnext:main": "gulpfile.js",
   "scripts": {
     "gulp": "./node_modules/.bin/gulp",
-    "build": "set NODE_ENV=production&&gulp",
-    "start": "set NODE_ENV=development&&gulp serve",
-    "prod": "set NODE_ENV=production&&gulp serve",
+    "build": "cross-env NODE_ENV=production gulp",
+    "start": "cross-env NODE_ENV=development gulp serve",
+    "prod": "cross-env NODE_ENV=production gulp serve",
     "styles": "gulp styles",
     "scripts": "gulp scripts",
     "lintStyles": "gulp lintStyles",
@@ -41,33 +41,37 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
-    "browser-sync": "^2.18.13",
+    "browser-sync": "^2.23.6",
+    "cross-env": "^5.1.4",
     "cssnano": "^3.10.0",
     "del": "^3.0.0",
-    "eslint": "^4.11.0",
+    "eslint": "^4.18.2",
     "eslint-config-google": "^0.9.1",
-    "eslint-plugin-html": "^4.0.0",
+    "eslint-plugin-html": "^4.0.2",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-eslint": "^4.0.0",
-    "gulp-htmlmin": "^3.0.0",
+    "gulp-eslint": "^4.0.2",
+    "gulp-htmlmin": "^4.0.0",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.0.0",
+    "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-minify-inline": "^1.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^7.0.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-stylelint": "^5.0.0",
+    "gulp-size": "^3.0.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-stylelint": "^7.0.0",
     "gulp-util": "^3.0.8",
-    "postcss-cssnext": "^3.0.2",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-preset-env": "^3.2.2",
     "postcss-reporter": "^5.0.0",
-    "stylelint-config-standard": "^17.0.0",
+    "stylelint": "^9.1.3",
+    "stylelint-config-standard": "^18.2.0",
     "stylelint-processor-html": "^1.0.0",
     "uglify-loader": "^2.0.0",
-    "webpack": "^3.8.1"
+    "webpack": "^4.1.1"
   }
 }
