--- a/package.json
+++ b/package.json
@@ -22,35 +22,19 @@
     "url": "https://github.com/arturparkhisenko/arturparkhisenko.github.io/issues"
   },
   "license": "MIT",
-  "babel": {
-    "presets": [
-      [
-        "env",
-        {
-          "targets": {
-            "browsers": [
-              "> 1%",
-              "last 2 versions",
-              "safari >= 7",
-              "Firefox ESR"
-            ]
-          }
-        }
-      ]
-    ]
-  },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
+    "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "browser-sync": "^2.23.6",
-    "cross-env": "^5.1.4",
+    "babel-preset-env": "^1.7.0",
+    "browser-sync": "^2.24.4",
+    "cross-env": "^5.1.5",
     "cssnano": "^3.10.0",
     "del": "^3.0.0",
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
-    "eslint-plugin-html": "^4.0.2",
+    "eslint-plugin-html": "^4.0.3",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-eslint": "^4.0.2",
     "gulp-htmlmin": "^4.0.0",
@@ -66,12 +50,11 @@
     "gulp-stylelint": "^7.0.0",
     "gulp-util": "^3.0.8",
     "postcss-cssnext": "^3.1.0",
-    "postcss-preset-env": "^3.2.2",
+    "postcss-preset-env": "^4.1.0",
     "postcss-reporter": "^5.0.0",
-    "stylelint": "^9.1.3",
+    "stylelint": "^9.2.0",
     "stylelint-config-standard": "^18.2.0",
-    "stylelint-processor-html": "^1.0.0",
     "uglify-loader": "^2.0.0",
-    "webpack": "^4.1.1"
+    "webpack": "^4.8.1"
   }
 }
