--- a/.eslintrc
+++ b/.eslintrc
@@ -15,8 +15,9 @@
   },
   "plugins": ["html"],
   "rules": {
+    "comma-dangle": ["error", "never"],
     "no-console": 0,
     "no-param-reassign": 0,
-    "comma-dangle": ["error", "never"]
+    "require-jsdoc": "off"
   }
 }
