--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.24.6",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.0",
+    "browser-sync": "^2.24.7",
     "cross-env": "^5.2.0",
-    "cssnano": "^4.0.5",
+    "cssnano": "^4.1.0",
     "del": "^3.0.0",
     "eslint": "^5.4.0",
     "eslint-config-google": "^0.9.1",
