--- a/package.json
+++ b/package.json
@@ -23,21 +23,20 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
     "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
-    "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.0",
-    "browser-sync": "^2.24.7",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "browser-sync": "^2.26.3",
     "cross-env": "^5.2.0",
-    "cssnano": "^4.1.0",
+    "cssnano": "^4.1.7",
     "del": "^3.0.0",
-    "eslint": "^5.4.0",
-    "eslint-config-google": "^0.9.1",
-    "eslint-plugin-html": "^4.0.5",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "eslint": "^5.8.0",
+    "eslint-plugin-html": "^4.0.6",
+    "gulp": "^4.0.0",
     "gulp-eslint": "^5.0.0",
-    "gulp-htmlmin": "^4.0.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "^1.5.0",
@@ -47,14 +46,14 @@
     "gulp-rename": "^1.4.0",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-stylelint": "^7.0.0",
+    "gulp-stylelint": "^8.0.0",
     "gulp-util": "^3.0.8",
     "postcss-cssnext": "^3.1.0",
-    "postcss-preset-env": "^5.3.0",
+    "postcss-preset-env": "^6.3.0",
     "postcss-reporter": "^6.0.0",
-    "stylelint": "^9.5.0",
+    "stylelint": "^9.7.1",
     "stylelint-config-standard": "^18.2.0",
-    "uglify-loader": "^2.0.0",
-    "webpack": "^4.17.1"
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.23.1"
   }
 }
