--- a/package.json
+++ b/package.json
@@ -23,25 +23,25 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
     "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "browser-sync": "^2.26.3",
     "cross-env": "^5.2.0",
-    "cssnano": "^4.1.7",
+    "cssnano": "^4.1.8",
     "del": "^3.0.0",
-    "eslint": "^5.8.0",
-    "eslint-plugin-html": "^4.0.6",
+    "eslint": "^5.12.1",
+    "eslint-plugin-html": "^5.0.0",
     "gulp": "^4.0.0",
     "gulp-eslint": "^5.0.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.1.0",
+    "gulp-imagemin": "^5.0.3",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-minify-inline": "^1.0.0",
-    "gulp-plumber": "^1.2.0",
+    "gulp-minify-inline": "^1.1.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-size": "^3.0.0",
@@ -49,11 +49,11 @@
     "gulp-stylelint": "^8.0.0",
     "gulp-util": "^3.0.8",
     "postcss-cssnext": "^3.1.0",
-    "postcss-preset-env": "^6.3.0",
-    "postcss-reporter": "^6.0.0",
-    "stylelint": "^9.7.1",
+    "postcss-preset-env": "^6.5.0",
+    "postcss-reporter": "^6.0.1",
+    "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.23.1"
+    "terser-webpack-plugin": "^1.2.1",
+    "webpack": "^4.29.0"
   }
 }
