--- a/package.json
+++ b/package.json
@@ -22,14 +22,22 @@
     "url": "https://github.com/arturparkhisenko/arturparkhisenko.github.io/issues"
   },
   "license": "MIT",
+  "browserslist": [
+    "> 1%",
+    "Firefox ESR",
+    "last 2 versions",
+    "not dead",
+    "not ie 11",
+    "not op_mini all"
+  ],
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "@mapbox/stylelint-processor-arbitrary-tags": "^0.3.0",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
-    "cross-env": "^7.0.0",
+    "cross-env": "^7.0.2",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
     "eslint": "^6.8.0",
@@ -50,9 +58,9 @@
     "plugin-error": "^1.0.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-reporter": "^6.0.1",
-    "stylelint": "^13.0.0",
-    "stylelint-config-standard": "^19.0.0",
-    "terser-webpack-plugin": "^2.3.4",
-    "webpack": "^4.41.5"
+    "stylelint": "^13.2.1",
+    "stylelint-config-standard": "^20.0.0",
+    "terser-webpack-plugin": "^2.3.5",
+    "webpack": "^4.42.0"
   }
 }
