--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,19 @@
 {
-  "extends": ["eslint:recommended"],
-  "parser": "babel-eslint",
   "env": {
     "browser": true,
     "es2020": true,
     "node": true,
     "serviceworker": true
   },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:jsx-a11y/recommended"
+  ],
+  "globals": {
+    "__PATH_PREFIX__": "readonly"
+  },
+  "parser": "babel-eslint",
   "rules": {
     "comma-dangle": ["error", "never"],
     "no-console": 0,
