--- a/blog-src/package.json
+++ b/blog-src/package.json
@@ -14,42 +14,43 @@
   "scripts": {
     "build": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,json}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "fs-extra": "^9.0.0",
-    "gatsby": "^2.21.9",
-    "gatsby-image": "^2.4.0",
-    "gatsby-plugin-catch-links": "^2.3.0",
-    "gatsby-plugin-dark-mode": "^1.1.1",
-    "gatsby-plugin-feed": "^2.5.0",
-    "gatsby-plugin-manifest": "^2.4.1",
-    "gatsby-plugin-offline": "^3.2.0",
-    "gatsby-plugin-react-helmet": "^3.3.0",
-    "gatsby-plugin-sharp": "^2.6.0",
-    "gatsby-plugin-sitemap": "^2.4.1",
-    "gatsby-plugin-typography": "^2.5.0",
-    "gatsby-remark-autolink-headers": "^2.3.0",
-    "gatsby-remark-copy-linked-files": "^2.3.1",
+    "fs-extra": "^9.0.1",
+    "gatsby": "^2.23.3",
+    "gatsby-image": "^2.4.7",
+    "gatsby-plugin-catch-links": "^2.3.5",
+    "gatsby-plugin-dark-mode": "^1.1.2",
+    "gatsby-plugin-feed": "^2.5.5",
+    "gatsby-plugin-manifest": "^2.4.11",
+    "gatsby-plugin-offline": "^3.2.9",
+    "gatsby-plugin-react-helmet": "^3.3.4",
+    "gatsby-plugin-sharp": "^2.6.11",
+    "gatsby-plugin-sitemap": "^2.4.5",
+    "gatsby-plugin-typography": "^2.5.4",
+    "gatsby-remark-abbr": "^2.0.0",
+    "gatsby-remark-autolink-headers": "^2.3.5",
+    "gatsby-remark-copy-linked-files": "^2.3.5",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^3.3.0",
-    "gatsby-remark-prismjs": "^3.5.0",
+    "gatsby-remark-images": "^3.3.10",
+    "gatsby-remark-prismjs": "^3.5.4",
     "gatsby-remark-reading-time": "^1.1.0",
-    "gatsby-remark-responsive-iframe": "^2.4.1",
-    "gatsby-remark-smartypants": "^2.3.0",
-    "gatsby-source-filesystem": "^2.3.0",
-    "gatsby-transformer-remark": "^2.8.4",
-    "gatsby-transformer-sharp": "^2.5.0",
+    "gatsby-remark-responsive-iframe": "^2.4.5",
+    "gatsby-remark-smartypants": "^2.3.4",
+    "gatsby-source-filesystem": "^2.3.11",
+    "gatsby-transformer-remark": "^2.8.15",
+    "gatsby-transformer-sharp": "^2.5.5",
     "lodash.kebabcase": "^4.1.1",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
+    "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
     "typeface-press-start-2p": "0.0.72",
     "typeface-source-sans-pro": "^1.1.5",
