--- a/.eslintrc
+++ b/.eslintrc
@@ -21,5 +21,10 @@
     "no-console": 0,
     "no-param-reassign": 0,
     "require-jsdoc": "off"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
