--- a/package.json
+++ b/package.json
@@ -30,35 +30,38 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
     "@mapbox/stylelint-processor-arbitrary-tags": "^0.3.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "browser-sync": "^2.26.12",
     "cross-env": "^7.0.2",
     "cssnano": "^4.1.10",
-    "del": "^5.1.0",
-    "eslint": "^7.9.0",
+    "del": "^6.0.0",
+    "eslint": "^7.11.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react": "^7.21.4",
     "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
     "gulp-eslint": "^6.0.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
-    "gulp-load-plugins": "^2.0.4",
+    "gulp-load-plugins": "^2.0.5",
     "gulp-minify-inline": "^1.1.0",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-stylelint": "^13.0.0",
+    "postcss": "^8.1.1",
     "postcss-preset-env": "^6.7.0",
-    "postcss-reporter": "^6.0.1",
-    "stylelint": "^13.7.1",
+    "postcss-reporter": "^7.0.1",
+    "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
-    "terser-webpack-plugin": "^4.2.1",
-    "webpack": "^4.44.2"
+    "terser-webpack-plugin": "^5.0.0",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.0.0"
   }
 }
