--- a/blog-src/package.json
+++ b/blog-src/package.json
@@ -22,34 +22,34 @@
   },
   "dependencies": {
     "fs-extra": "^9.0.1",
-    "gatsby": "^2.24.80",
-    "gatsby-image": "^2.4.21",
-    "gatsby-plugin-catch-links": "^2.3.15",
+    "gatsby": "^2.28.0",
+    "gatsby-image": "^2.7.0",
+    "gatsby-plugin-catch-links": "^2.6.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
-    "gatsby-plugin-feed": "^2.5.15",
-    "gatsby-plugin-manifest": "^2.4.35",
-    "gatsby-plugin-offline": "^3.2.33",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.6.42",
-    "gatsby-plugin-sitemap": "^2.4.17",
-    "gatsby-plugin-typography": "^2.5.13",
+    "gatsby-plugin-feed": "^2.9.0",
+    "gatsby-plugin-manifest": "^2.8.0",
+    "gatsby-plugin-offline": "^3.6.0",
+    "gatsby-plugin-react-helmet": "^3.6.0",
+    "gatsby-plugin-sharp": "^2.10.0",
+    "gatsby-plugin-sitemap": "^2.8.0",
+    "gatsby-plugin-typography": "^2.8.0",
     "gatsby-remark-abbr": "^2.0.0",
-    "gatsby-remark-autolink-headers": "^2.3.15",
-    "gatsby-remark-copy-linked-files": "^2.3.19",
-    "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^3.3.35",
-    "gatsby-remark-prismjs": "^3.5.16",
+    "gatsby-remark-autolink-headers": "^2.7.0",
+    "gatsby-remark-copy-linked-files": "^2.6.0",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^3.7.0",
+    "gatsby-remark-prismjs": "^3.9.0",
     "gatsby-remark-reading-time": "^1.1.0",
-    "gatsby-remark-responsive-iframe": "^2.4.17",
-    "gatsby-remark-smartypants": "^2.3.13",
-    "gatsby-source-filesystem": "^2.3.35",
-    "gatsby-transformer-remark": "^2.8.42",
-    "gatsby-transformer-sharp": "^2.5.18",
+    "gatsby-remark-responsive-iframe": "^2.7.0",
+    "gatsby-remark-smartypants": "^2.6.0",
+    "gatsby-source-filesystem": "^2.7.0",
+    "gatsby-transformer-remark": "^2.12.0",
+    "gatsby-transformer-sharp": "^2.8.0",
     "lodash.kebabcase": "^4.1.1",
     "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
     "fontsource-press-start-2p": "^3.0.9",
@@ -58,6 +58,6 @@
     "typography-theme-us-web-design-standards": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "prettier": "^2.2.1"
   }
 }
