--- a/package.json
+++ b/package.json
@@ -30,18 +30,18 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.12.10",
     "@babel/eslint-parser": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-env": "^7.12.11",
     "@mapbox/stylelint-processor-arbitrary-tags": "^0.3.0",
     "babel-loader": "^8.2.2",
     "browser-sync": "^2.26.13",
     "cross-env": "^7.0.3",
     "cssnano": "^4.1.10",
     "del": "^6.0.0",
-    "eslint": "^7.14.0",
+    "eslint": "^7.17.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.22.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "gulp-eslint": "^6.0.0",
@@ -55,13 +55,14 @@
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-stylelint": "^13.0.0",
-    "postcss": "^8.1.10",
+    "postcss": "^8.2.3",
     "postcss-preset-env": "^6.7.0",
     "postcss-reporter": "^7.0.2",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
     "terser-webpack-plugin": "^5.0.3",
-    "webpack": "^5.9.0",
-    "webpack-cli": "^4.2.0"
-  }
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.1"
+  },
+  "dependencies": {}
 }
