change gatsby-image to plugin

--- a/blog-src/package.json
+++ b/blog-src/package.json
@@ -25,10 +25,10 @@
     "fontsource-source-sans-pro": "^3.0.9",
     "fs-extra": "^10.0.0",
     "gatsby": "^3.7.1",
-    "gatsby-image": "^3.7.1",
     "gatsby-plugin-catch-links": "^3.7.1",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-feed": "^3.7.1",
+    "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-manifest": "^3.7.1",
     "gatsby-plugin-offline": "^4.7.1",
     "gatsby-plugin-react-helmet": "^4.7.1",
