--- a/package.json
+++ b/package.json
@@ -30,38 +30,38 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/eslint-parser": "^7.14.7",
-    "@babel/preset-env": "^7.14.7",
+    "@babel/core": "^7.15.5",
+    "@babel/eslint-parser": "^7.15.7",
+    "@babel/preset-env": "^7.15.6",
     "@mapbox/stylelint-processor-arbitrary-tags": "^0.4.0",
     "babel-loader": "^8.2.2",
-    "browser-sync": "^2.27.4",
+    "browser-sync": "^2.27.5",
     "cross-env": "^7.0.3",
-    "cssnano": "^5.0.6",
+    "cssnano": "^5.0.8",
     "del": "^6.0.0",
-    "eslint": "^7.30.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.26.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "gulp-eslint": "^6.0.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^7.1.0",
+    "gulp-imagemin": "7.1.0",
     "gulp-load-plugins": "^2.0.7",
     "gulp-minify-inline": "^1.1.0",
-    "gulp-postcss": "^9.0.0",
+    "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-size": "^4.0.1",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-stylelint": "^13.0.0",
-    "postcss": "^8.3.5",
+    "postcss": "^8.3.6",
     "postcss-preset-env": "^6.7.0",
     "postcss-reporter": "^7.0.2",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
-    "terser-webpack-plugin": "^5.1.4",
-    "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2"
+    "terser-webpack-plugin": "^5.2.4",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0"
   }
 }
