--- a/blog-src/package.json
+++ b/blog-src/package.json
@@ -21,32 +21,31 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "fontsource-press-start-2p": "^3.0.9",
-    "fontsource-source-sans-pro": "^3.0.9",
+    "@fontsource/press-start-2p": "^4.5.0",
+    "@fontsource/source-sans-pro": "^4.5.0",
     "fs-extra": "^10.0.0",
-    "gatsby": "^3.14.0",
-    "gatsby-plugin-catch-links": "^3.14.0",
-    "gatsby-plugin-dark-mode": "^1.1.2",
-    "gatsby-plugin-feed": "^3.14.0",
-    "gatsby-plugin-image": "^1.14.0",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-offline": "^4.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
-    "gatsby-plugin-sharp": "^3.14.0",
-    "gatsby-plugin-sitemap": "^4.10.0",
-    "gatsby-plugin-typography": "^3.14.0",
+    "gatsby": "^4.0.2",
+    "gatsby-plugin-catch-links": "^4.0.0",
+    "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-manifest": "^4.0.0",
+    "gatsby-plugin-offline": "^5.0.0",
+    "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-sharp": "^4.0.1",
+    "gatsby-plugin-sitemap": "^5.0.0",
+    "gatsby-plugin-typography": "^4.0.0",
+    "gatsby-plugin-use-dark-mode": "^1.4.0",
     "gatsby-remark-acronyms": "^1.1.3",
-    "gatsby-remark-autolink-headers": "^4.11.0",
-    "gatsby-remark-copy-linked-files": "^4.11.0",
+    "gatsby-remark-autolink-headers": "^5.0.0",
+    "gatsby-remark-copy-linked-files": "^5.0.0",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^5.11.0",
-    "gatsby-remark-prismjs": "^5.11.0",
+    "gatsby-remark-images": "^6.0.0",
+    "gatsby-remark-prismjs": "^6.0.0",
     "gatsby-remark-reading-time": "^1.1.0",
-    "gatsby-remark-responsive-iframe": "^4.11.0",
-    "gatsby-remark-smartypants": "^4.11.0",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-transformer-remark": "^4.11.0",
-    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-remark-responsive-iframe": "^5.0.0",
+    "gatsby-remark-smartypants": "^5.0.0",
+    "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-transformer-remark": "4.11.0",
+    "gatsby-transformer-sharp": "^4.0.0",
     "lodash.kebabcase": "^4.1.1",
     "prismjs": "^1.25.0",
     "prop-types": "^15.7.2",
@@ -55,7 +54,8 @@
     "react-helmet": "^6.1.0",
     "react-typography": "^0.16.20",
     "typography": "^0.16.21",
-    "typography-theme-us-web-design-standards": "^0.16.19"
+    "typography-theme-us-web-design-standards": "^0.16.19",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
