--- a/blog-src/package.json
+++ b/blog-src/package.json
@@ -21,42 +21,40 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@fontsource/press-start-2p": "^4.5.5",
-    "@fontsource/source-sans-pro": "^4.5.6",
-    "fs-extra": "^10.0.1",
-    "gatsby": "^4.11.2",
-    "gatsby-plugin-catch-links": "^4.11.0",
-    "gatsby-plugin-image": "^2.11.1",
-    "gatsby-plugin-manifest": "^4.11.1",
-    "gatsby-plugin-offline": "^5.11.1",
-    "gatsby-plugin-react-helmet": "^5.11.0",
-    "gatsby-plugin-sharp": "^4.11.1",
-    "gatsby-plugin-sitemap": "^5.11.1",
-    "gatsby-plugin-typography": "^4.11.0",
-    "gatsby-plugin-use-dark-mode": "^1.4.0",
-    "gatsby-remark-acronyms": "^1.1.4",
-    "gatsby-remark-autolink-headers": "^5.11.1",
-    "gatsby-remark-copy-linked-files": "^5.11.0",
+    "@fontsource/press-start-2p": "^4.5.11",
+    "@fontsource/source-sans-pro": "^4.5.11",
+    "fs-extra": "^11.1.0",
+    "gatsby": "^5.3.2",
+    "gatsby-plugin-catch-links": "^5.3.0",
+    "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-manifest": "^5.3.1",
+    "gatsby-plugin-offline": "^6.3.1",
+    "gatsby-plugin-sharp": "^5.3.2",
+    "gatsby-plugin-sitemap": "^6.3.1",
+    "gatsby-plugin-typography": "^5.3.0",
+    "gatsby-plugin-use-dark-mode": "^2.0.0",
+    "gatsby-remark-acronyms": "^1.2.1",
+    "gatsby-remark-autolink-headers": "^6.3.1",
+    "gatsby-remark-copy-linked-files": "^6.3.0",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^6.11.1",
-    "gatsby-remark-prismjs": "^6.11.0",
-    "gatsby-remark-responsive-iframe": "^5.11.0",
-    "gatsby-remark-smartypants": "^5.11.0",
-    "gatsby-source-filesystem": "^4.11.1",
-    "gatsby-transformer-remark": "5.11.1",
-    "gatsby-transformer-sharp": "^4.11.0",
+    "gatsby-remark-images": "^7.3.1",
+    "gatsby-remark-prismjs": "^7.3.0",
+    "gatsby-remark-responsive-iframe": "^6.3.0",
+    "gatsby-remark-smartypants": "^6.3.0",
+    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-remark": "6.3.1",
+    "gatsby-transformer-sharp": "^5.3.1",
     "lodash.kebabcase": "^4.1.1",
-    "prismjs": "^1.27.0",
+    "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-typography": "^0.16.20",
+    "react-typography": "^0.16.23",
     "typography": "^0.16.21",
-    "typography-theme-us-web-design-standards": "^0.16.19",
-    "use-dark-mode": "^2.3.1"
+    "typography-theme-us-web-design-standards": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "^2.6.2"
+    "prettier": "^2.8.1"
   }
 }
